# rzz2

./: README.md
.github/workflows/: azure-static-web-apps-black-stone-044dbc70f.yml  master_rzzproxyz.yml
frontend/: .editorconfig  .eslintrc.js  README.md  package-lock.json  package.json
frontend/src/: App.vue  settings.js
frontend/src/components/: CategoriesTabs.vue  Header.vue  HelloWorld.vue  List.vue  SearchFeedsResults.vue  SearchFeedsText.vue  SourcesTabs.vue  Tabs.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/store/: index.js  localDb.js  mutation_types.js
frontend/src/store/modules/: news.js
frontend/src/views/: FindFeeds.vue  Home.vue  SearchFeedsResults.vue
proxyz/: Cargo.toml
proxyz-azure/: package-lock.json  package.json
proxyz-azure/corso/: function.json  index.js
proxyz/src/: main.rs
